---
source: src/visitor/dot.rs
expression: v.into_inner().finalise()
---
digraph g {
	page_2:1081165011111111111111111111111111111 -> page_3:head;
	page_3 [shape=record, label="<head>Level 1|<1081164911111111111111111111111111111>·|1081164911111111111111111111111111111"]

	page_1:12295107491111111111111111111111111111 -> page_2:head;
	page_2 [shape=record, label="<head>Level 2|<1081165011111111111111111111111111111>·|1081165011111111111111111111111111111"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 42|<12295107491111111111111111111111111111>·|12295107491111111111111111111111111111|<12295107501111111111111111111111111111>·|12295107501111111111111111111111111111"]

}

